--- a/.config
+++ b/.config
@@ -62,9 +62,10 @@ CONFIG_PACKAGE_libyaml=y
 # CONFIG_PACKAGE_luci-app-accesscontrol is not set
 # CONFIG_PACKAGE_luci-app-arpbind is not set
 # CONFIG_PACKAGE_luci-app-ddns is not set
+# CONFIG_PACKAGE_luci-app-filetransfer is not set
 CONFIG_PACKAGE_luci-app-flowoffload=y
+CONFIG_PACKAGE_luci-app-netdata=y
 # CONFIG_PACKAGE_luci-app-nlbwmon is not set
-CONFIG_PACKAGE_luci-app-ntpc=y
 CONFIG_PACKAGE_luci-app-openclash=y
 # CONFIG_PACKAGE_luci-app-rclone_INCLUDE_fuse-utils is not set
 # CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-ng is not set
@@ -78,8 +79,9 @@ CONFIG_PACKAGE_luci-app-openclash=y
 # CONFIG_PACKAGE_luci-app-wol is not set
 # CONFIG_PACKAGE_luci-app-zerotier is not set
 CONFIG_PACKAGE_luci-i18n-flowoffload-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-ntpc-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-netdata-zh-cn=y
 CONFIG_PACKAGE_microsocks=y
+CONFIG_PACKAGE_netdata=y
 # CONFIG_PACKAGE_nlbwmon is not set
 CONFIG_PACKAGE_nspr=y
 CONFIG_PACKAGE_ntpclient=y
@@ -146,7 +148,7 @@ CONFIG_PACKAGE_libip6tc=y
 CONFIG_PACKAGE_libminiupnpc=y
 CONFIG_PACKAGE_libnatpmp=y
 CONFIG_PACKAGE_libnghttp2=y
-CONFIG_PACKAGE_libuv=y
+CONFIG_PACKAGE_luci-lib-fs=y
 CONFIG_PACKAGE_miniupnpd=y
 CONFIG_PACKAGE_node=y
 CONFIG_PACKAGE_vlmcsd=y
